--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,14 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container d-flex justify-content-between">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">ICCG</a>
+      <a class="navbar-brand">ICCG</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#"><span class="glyphicon glyphicon-globe" style="color:#50BCEC"></span> Plaza</a></li>
-      <li><a href="#">Documents</a></li>
+      <li><a><span class="glyphicon glyphicon-globe" style="color:#50BCEC"></span> Plaza</a></li>
+      <li><a>Documents</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><span class="glyphicon glyphicon-fire" style="color:orange"></span> Dequeue</a></li>
+      <li><a id="cleansing_fire" hidden><span class="glyphicon glyphicon-fire" style="color:orange"></span> Dequeue</a></li>
       <li><a href=<%=logout_path%> data-method="delete" data-remote="true"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
     </ul>
   </div>
