added invite modal

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,6 +26,7 @@
 <p>
   <center>
     <button id="queue_button" type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#queue_modal">Queue for a game</button>
+    <button id="central_dequeue" type="button" class="btn btn-warning btn-lg"><span class="glyphicon glyphicon-fire" style="color:blue"></span> Dequeue <span class="glyphicon glyphicon-fire" style="color:blue"></button>
   </center>
 </p>
 
