--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
       <li><a>Documents</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a id="cleansing_fire" hidden><span class="glyphicon glyphicon-fire" style="color:orange"></span> Dequeue</a></li>
+      <li><a id="cleansing_fire" style="cursor:pointer" hidden><span class="glyphicon glyphicon-fire" style="color:orange"></span> Dequeue</a></li>
       <li><a href=<%=logout_path%> data-method="delete" data-remote="true"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
     </ul>
   </div>
@@ -40,6 +40,58 @@
       </div>
       <div class="modal-footer">
         <%= link_to "Have no account yet? Sign up now!", signup_path, class: "btn btn-small btn-primary" %>
+      </div>
+    </div>
+    
+  </div>
+</div><div id="signup_modal" class="modal fade" role="document">
+  <div class="modal-dialog">
+    
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Who are you?</h4>
+      </div>
+      <div class="modal-body">
+        <div class="container"><span id="error_msg" class="alert alert-danger" style="display:none;">Wrong email or password.</span></div>
+        <div>
+          <%= form_for(:session, url: login_path, remote: true) do |f| %>
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control' %>
+          <%= f.label :password %>
+          <%= f.password_field :password, class: 'form-control' %>
+          <%= f.label :remember_me, class: "checkbox inline" do %>
+          <% end %>
+          <%= f.check_box :remember_me %>
+          <span>Remember me on this computer</span>
+          <%= f.submit "Log in", class: "btn btn-primary"%>
+          <% end %>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <%= link_to "Have no account yet? Sign up now!", signup_path, class: "btn btn-small btn-primary" %>
+      </div>
+    </div>
+    
+  </div>
+</div>
+
+<div id="invite_modal" class="modal fade" role="document">
+  <div class="modal-dialog">
+    
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Random ICCG</h4>
+      </div>
+      <div class="modal-body">
+        Your role: <span id="role"></span>
+      </div>
+      <div class="modal-footer">
+        <center>
+          <button id="accept_button" type="button" class="btn btn-success btn-lg">Accept</button>
+          <button id="accept_button" type="button" class="btn btn-danger btn-lg">Decline</button>
+        </center>
       </div>
     </div>
     
