--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -89,8 +89,8 @@
       </div>
       <div class="modal-footer">
         <center>
-          <button id="accept_button" type="button" class="btn btn-success btn-lg">Accept</button>
-          <button id="accept_button" type="button" class="btn btn-danger btn-lg">Decline</button>
+          <button id="accept_button" type="button" class="btn btn-success btn-lg" data-dismiss="modal">Accept</button>
+          <button id="decline_button" type="button" class="btn btn-danger btn-lg" data-dismiss="modal">Decline</button>
         </center>
       </div>
     </div>
