--- a/app/views/shared/_document.html.erb
+++ b/app/views/shared/_document.html.erb
@@ -1,5 +1,4 @@
-<h2>Document</h2>
 <div class="document-scroll">
-  <div><%= @document.title %></div>
-  <div><%= simple_format @document.content %></div>
+  <h1><%= @document.title %></h1>
+  <%= @document.content %>
 </div>
