--- a/app/views/judges/show.html.erb
+++ b/app/views/judges/show.html.erb
@@ -15,30 +15,5 @@
   </div>
 </div>
 
-<div class="container" id="whiteboard">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <%= render partial: "shared/whiteboard_head" %>
-      <center><h6 style="color:blue" id="wb_instruction">tap or hover to expand</h6></center>
-    </div>
-    <div class="panel-body">
-      <div class="container" id="whiteboard_body" hidden>
-        <%= render partial: "/shared/whiteboard_tail"%>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="container" id="document">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <%= render partial: "/shared/document_title" %>
-      <center><h6 id="doc_instruction" style="color:blue">tap or hover to expand</h6></center>
-    </div>
-    <div class="panel-body">
-      <div class="container" id="document_body" hidden>
-        <%= render partial: "/shared/document_body"%>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render partial: "/shared/whiteboard_panel" %>
+<%= render partial: "/shared/document_panel" %>
