--- a/app/views/readers/show.html.erb
+++ b/app/views/readers/show.html.erb
@@ -7,7 +7,7 @@
         <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
       </div>
       <center>
-        <button type="button" class="btn btn-primary btn-lg">ask question</button>
+        <button type="button" class="btn btn-primary btn-lg" id="ask_btn">ask question</button>
       </center>
     </div>
   </div>
@@ -30,7 +30,7 @@
         <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
       </div>
       <center>
-        <button type="button" class="btn btn-primary btn-lg">submit answer</button>
+        <button type="button" class="btn btn-primary btn-lg" id="answer_btn">submit answer</button>
       </center>
     </div>
   </div>
@@ -59,3 +59,4 @@
 
 <%= render partial: "/shared/document_panel" %>
 <%= render partial: "/shared/whiteboard_panel" %>
+<div id="info" data-source=<%= get_round_data_game_reader_path(params[:game_id], params[:id]) %> data-submit_question=<%= submit_question_game_reader_path(params[:game_id], params[:id])%> </div>
