--- a/app/views/guessers/show.html.erb
+++ b/app/views/guessers/show.html.erb
@@ -1,1 +1,61 @@
-Play as guesser here.
+<div class="container">
+  <div class="panel panel-default" id="question_form" hidden>
+    <div class="panel-body">
+      <div class="form-group" id="warning_q">
+        <label for="question">Question:</label>
+        <input type="text" class="form-control" id="question">
+        <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
+      </div>
+      <center>
+        <button type="button" class="btn btn-primary btn-lg" id="ask_btn">ask question</button>
+      </center>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="panel panel-default" id="question_display" hidden>
+    <div class="panel-body">
+      <label>Question:</label><p id="question_text"></p>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="panel panel-default" id="answer_form" hidden>
+    <div class="panel-body">
+      <div class="form-group" id="warning_a">
+        <label for="answer">Answer:</label>
+        <input type="text" class="form-control" id="answer">
+        <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
+      </div>
+      <center>
+        <button type="button" class="btn btn-primary btn-lg" id="answer_btn">submit answer</button>
+      </center>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="panel panel-default" id="answers_display" hidden>
+    <div class="panel-body">
+      <div class"container">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <label>Reader's answer:</label><p id="reader_answer_text">...</p>
+          </div>
+        </div>
+      </div>
+      <div class"container">
+        <div class="panel panel-default">
+          <div class="panel-body">
+            <label>Guesser's answer:</label><p id="guesser_answer_text">...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%= render partial: "/shared/whiteboard_panel" %>
+<div id="info" data-source=<%= get_round_data_game_guesser_path(params[:game_id], params[:id]) %> data-submit_question=<%= submit_question_game_guesser_path(params[:game_id], params[:id])%> data-submit_answer=<%= submit_answer_game_guesser_path(params[:game_id], params[:id])%> </div>
