--- a/app/views/shared/_whiteboard_panel.html.erb
+++ b/app/views/shared/_whiteboard_panel.html.erb
@@ -1,11 +1,15 @@
 <div class="container" id="whiteboard" style="cursor:pointer">
   <div class="panel panel-default">
     <div class="panel-heading">
+      <h2> Most recent round </h2>
       <%= render partial: "shared/whiteboard_head" %>
-      <center><h6 style="color:blue" id="wb_instruction">tap or hover to expand</h6></center>
+      <center>
+        <h2> less recent rounds </h2>
+        <h6 style="color:blue" id="wb_instruction">tap or hover to expand</h6>
+      </center>
     </div>
     <div class="panel-body">
-      <div class="container" id="whiteboard_body" hidden>
+      <div id="whiteboard_body" hidden>
         <%= render partial: "/shared/whiteboard_tail"%>
       </div>
     </div>
