--- a/app/views/shared/_whiteboard_tail.html.erb
+++ b/app/views/shared/_whiteboard_tail.html.erb
@@ -1,14 +1,16 @@
-<% @whiteboard.reverse.each do |line| %>
-<tr>
-  <td><%= line[:question] %></td>
-  <td><%= line[:reader_answer] %></td>
-  <td><%= line[:guesser_answer] %></td>
-  <td>
-    <% if line[:guesser_marked]%>
-    Yes
-    <% else %>
-    No
-    <% end %>
-  </td>
-</tr>
-<% end %>
+<table class="table table-striped table-bordered table-responsive whiteboard-scroll">
+  <% @whiteboard.reverse[1, @whiteboard.size].each do |line| %>
+  <tr>
+    <td><%= line[:question] %></td>
+    <td><%= line[:reader_answer] %></td>
+    <td><%= line[:guesser_answer] %></td>
+    <td>
+      <% if line[:guesser_marked]%>
+      Yes
+      <% else %>
+      No
+      <% end %>
+    </td>
+  </tr>
+  <% end %>
+</table>
