--- a/app/views/shared/_whiteboard_panel.html.erb
+++ b/app/views/shared/_whiteboard_panel.html.erb
@@ -2,7 +2,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h2> Most recent round </h2>
-      <%= render partial: "shared/whiteboard_head" %>
+      <div id="wb_head_refresh"><%= render partial: "shared/whiteboard_head" %></div>
       <center>
         <h2> less recent rounds </h2>
         <h6 style="color:blue" id="wb_instruction">tap or hover to expand</h6>
