commit for heroku test

--- a/app/views/guessers/show.html.erb
+++ b/app/views/guessers/show.html.erb
@@ -1,3 +1,4 @@
+<%= render partial: "/shared/end_of_game" %>
 <%= render partial: "/shared/qAndA" %>
 <%= render partial: "/shared/whiteboard_panel" %>
 <div id="info" data-source=<%= get_round_data_game_guesser_path(params[:game_id], params[:id]) %>
