--- a/app/views/judges/show.html.erb
+++ b/app/views/judges/show.html.erb
@@ -31,6 +31,8 @@
   </div>
 </div>
 
+<%= render partial: "/shared/vote_to_quit" %>
+<%= render partial: "/shared/end_of_game" %>
 <%= render partial: "/shared/document_panel" %>
 <%= render partial: "/shared/whiteboard_panel" %>
 
