--- a/app/views/readers/show.html.erb
+++ b/app/views/readers/show.html.erb
@@ -1,5 +1,4 @@
-
-
+<%= render partial: "/shared/end_of_game" %>
 <%= render partial: "/shared/qAndA" %>
 <%= render partial: "/shared/document_panel" %>
 <%= render partial: "/shared/whiteboard_panel" %>
