--- a/app/views/shared/_qAndA.html.erb
+++ b/app/views/shared/_qAndA.html.erb
@@ -7,7 +7,10 @@
         <span class="glyphicon glyphicon-warning-sign form-control-feedback"></span>
       </div>
       <center>
-        <button type="button" class="btn btn-primary btn-lg" id="ask_btn">ask question</button>
+        <div>
+          <button type="button" class="btn btn-primary btn-lg" style="float:left" id="ask_btn">ask question</button>
+          <button type="button" class="btn btn-danger btn-sm" style="float:right" id="request_game_over">nothing left to ask</button>
+        </div>
       </center>
     </div>
   </div>
