fixed dead javascript bug

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -103,4 +103,4 @@
   </div>
 </div>
 
-<div id="info" data-quit_game_path=<%= quit_game_sync_games_managers_path %>></div>
+<div id="header_info" data-quit_game_path=<%= quit_game_sync_games_managers_path %>></div>
