--- a/app/views/shared/_end_of_game.html.erb
+++ b/app/views/shared/_end_of_game.html.erb
@@ -9,7 +9,7 @@
         <p>Some text in the modal.</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Leave</button>
+        <button id="game_over_leave_button" type="button" class="btn btn-default">Leave</button>
       </div>
     </div>
 
