fixed bug with end of game modal

--- a/app/views/judges/show.html.erb
+++ b/app/views/judges/show.html.erb
@@ -32,7 +32,7 @@
 </div>
 
 <%= render partial: "/shared/vote_to_quit" %>
-<%= render partial: "/shared/end_of_game" %>
+<div id="end_of_game_partial"><%= render partial: "/shared/end_of_game" %></div>
 <%= render partial: "/shared/document_panel" %>
 <%= render partial: "/shared/whiteboard_panel" %>
 
