fixed issue with document text overflowing panel

--- a/app/views/shared/_document_panel.html.erb
+++ b/app/views/shared/_document_panel.html.erb
@@ -5,7 +5,7 @@
       <center><h6 id="doc_instruction" style="color:blue">tap or hover to expand</h6></center>
     </div>
     <div class="panel-body">
-      <div class="container" id="document_body" hidden>
+      <div id="document_body" hidden>
         <%= render partial: "/shared/document_body"%>
       </div>
     </div>
